# SupplyChainAgent

./: PROJECT_SUMMARY.md  PROJECT_UPDATE.md  README.md  demo_frontend.html  diagnose.py  entry.sh  intro.md  pyproject.toml  start_demo.sh  start_offline.sh  start_offline_safe.sh  start_simple.sh  test_build.py  test_entry.sh
data/: batches.json  factories.json  fan_orders.json  inventory.json  skus.json  suppliers.json  supply_chain.db  warehouses.json  waybills.json
data/indices/: bm25.pkl  doc_store.pkl  documents.pkl  embeddings.npy  hnsw.meta.npy  hnsw.npy  ivf_pq.npy
scripts/: build_indexes.py  download_model.py  pretty_log.py
src/: __init__.py  config.py  models.py
src/agent/: __init__.py  llm_client.py  orchestrator.py
src/context/: __init__.py  assembler.py  progressive_disclosure.py  token_budget.py
src/data/: __init__.py  database.py  simple_vectorizer.py  synthetic_generator.py  vectorizer.py
src/memory/: __init__.py  long_term.py  offload.py  short_term.py
src/rag/: __init__.py  bm25_retriever.py  hnsw_pure.py  hnsw_retriever.py  ivf_pq_pure.py  ivf_pq_retriever.py  retriever.py  rff_fusion.py  simple_retriever.py
src/tools/: __init__.py  skill_manager.py  tool_executor.py
src/ui/: __init__.py  backend.py  backend_demo.py  backend_main.py
supplychainrag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: Dockerfile
tools/scripts/: risk_analysis.py
